Button margin below and input zoom on mobile fix.

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -189,6 +189,10 @@ img {
     margin-top: 3rem;
     text-align: center;
   }
+
+  #button {
+    margin-bottom: 4rem;
+  }
 }
 
 @media only screen and (max-width: 970px){
