--- a/app/src/Contact.css
+++ b/app/src/Contact.css
@@ -173,5 +173,13 @@ to {
         width: 8rem;
         padding: 0.8rem 0;
         font-size: 1rem;
+        margin-bottom: 4rem;
     }
 }
+
+
+@media screen and (max-width: 767px) {
+    input, select, textarea {
+      font-size: 16px;
+    }
+  }
